c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_parse/extra_credit/file_scope_label.c
/* Labels cannot appear at file scope. */
x:
int foo = 0;

int main(void) {
    return 0;
}